--- a/README
+++ b/README
@@ -1,1 +1,9 @@
 This is an incomplete collection of icons for Black'UPS Darkness HD designed for easy installation.
+
+Installation Instructions:
+1. If you don't have a program to access your files on your iPhone, download WinSCP for Windows or Cyberduck for OSX.
+2. Copy the "Bundles" folder you downloaded into private/var/stash/Themes.xxxxxx/Black'UPS Darkness Hd.theme
+3. Either reboot and respring or uncheck and recheck the Black'UPS theme in Winterboard to see the new icons.
+4. If you have any trouble, the official forum thread is located at: http://macthemes.net/forum/viewtopic.php?id=16805569.
+
+Bundle project started by Pxl_Buzzard, and a huge thanks to janullrich(Gaz) for all his help, and thanks to jackietran for creating this great theme in the first place!
