Added more compatibility with iOS 4.2.1, but the iPod/Music app still needs some work.
Signed-off-by: PxlBuzzard <torpedojost@gmail.com>

--- a/README
+++ b/README
@@ -2,8 +2,9 @@ This is an incomplete collection of icons for Black'UPS Darkness HD designed for
 
 Installation Instructions:
 1. If you don't have a program to access your files on your iPhone, download WinSCP for Windows or Cyberduck for OSX.
-2. Copy the "Bundles" folder you downloaded into private/var/stash/Themes.xxxxxx/Black'UPS Darkness Hd.theme
+2. Copy the "Bundles" folder you downloaded into private/var/stash/Themes.xxxxxx/Black'UPS Darkness HD.theme
 3. Either reboot and respring or uncheck and recheck the Black'UPS theme in Winterboard to see the new icons.
 4. If you have any trouble, the official forum thread is located at: http://macthemes.net/forum/viewtopic.php?id=16805569.
 
-Bundle project started by Pxl_Buzzard, and a huge thanks to janullrich(Gaz) for all his help, and thanks to jackietran for creating this great theme in the first place!
+Bundle project created by Pxl_Buzzard, and tremendously helped by Gaigo and janullrich (Gaz).
+A huge thank you to jackietran for creating Black'UPS Darkness HD!
