--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-This is an incomplete collection of icons for Black'UPS Darkness HD designed for easy installation.
+This is a collection of icons for Black'UPS Darkness HD designed for easy installation.
 
 Installation Instructions:
 1. If you don't have a program to access your files on your iPhone, download WinSCP for Windows or Cyberduck for OSX.
 2. Copy the "Bundles" folder you downloaded into private/var/stash/Themes.xxxxxx/Black'UPS Darkness HD.theme
-3. Either reboot and respring or uncheck and recheck the Black'UPS theme in Winterboard to see the new icons.
+3a. Either reboot and respring or:
+3b. Uncheck and recheck the Black'UPS theme in Winterboard and respring to see the new icons.
 4. If you have any trouble, the official forum thread is located at: http://macthemes.net/forum/viewtopic.php?id=16805569.
 
-Bundle project created by Pxl_Buzzard, and tremendously helped by Gaigo and janullrich (Gaz).
+Bundle project created by Pxl_Buzzard, and tremendously helped by Gaigo and janullrich (Gaz) with their Bundle contributions. Thank you to everyone on the forum who makes the icons too!
 A huge thank you to jackietran for creating Black'UPS Darkness HD!
