--- a/README
+++ b/README
@@ -7,5 +7,5 @@ Installation Instructions:
 3b. Uncheck and recheck the Black'UPS theme in Winterboard and respring to see the new icons.
 4. If you have any trouble, the official forum thread is located at: http://macthemes.net/forum/viewtopic.php?id=16805569.
 
-Bundle project created by Pxl_Buzzard, and tremendously helped by Gaigo and janullrich (Gaz) with their Bundle contributions. Thank you to everyone on the forum who makes the icons too!
+Bundle project created by Pxl_Buzzard, and tremendously helped by Gaigo and janullrich (Gaz) with their Bundle contributions. Thank you to everyone on the forum who makes the icons too.
 A huge thank you to jackietran for creating Black'UPS Darkness HD!
