Added icons up to page 158 and updated the Readme
Signed-off-by: PxlBuzzard <torpedojost@gmail.com>

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ This is a collection of icons for Black'UPS Darkness HD designed for easy instal
 
 Installation Instructions:
 1. If you don't have a program to access your files on your iPhone, download WinSCP for Windows or Cyberduck for OSX.
-2. Copy the "Bundles" folder you downloaded into private/var/stash/Themes.xxxxxx/Black'UPS Darkness HD.theme
+2. Copy the all of the folders from the download into: private/var/stash/Themes.xxxxxx/Black'UPS Darkness HD.theme on your iDevice.
 3a. Either reboot and respring or:
 3b. Uncheck and recheck the Black'UPS theme in Winterboard and respring to see the new icons.
 4. If you have any trouble, the official forum thread is located at: http://macthemes.net/forum/viewtopic.php?id=16805569.
